fix bottom nav spacing, start afterexpression bug fix

--- a/src/app/hero-detail/hero-detail.component.scss
+++ b/src/app/hero-detail/hero-detail.component.scss
@@ -107,3 +107,10 @@ article.hero-details {
   content: "🦄";
   font-size: 14px;
 }
+
+// bottom-nav goods
+.bottom-nav {
+  display: flex;
+  justify-content: left;
+  gap: 20px;
+}
